feat: basic api and server setup, react-query setup

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
+  "files": ["./.eslintrc.cjs","./.prettierrc.cjs","./tailwind.config.cjs"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
