--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.5.3",
+    "passport-github2": "^0.1.12"
   }
 }
