--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.7.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12"
