--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.14.1",
-    "@tanstack/react-query-devtools": "^4.14.1",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-spinners": "^0.13.6"
   },
