--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.5",
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
-    "react-spinners": "^0.13.6"
+    "react-spinners": "^0.13.6",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
