--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.5",
@@ -25,6 +27,12 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-alpha.54",
+    "@storybook/addon-interactions": "^7.0.0-alpha.54",
+    "@storybook/addon-links": "^7.0.0-alpha.54",
+    "@storybook/react": "^7.0.0-alpha.54",
+    "@storybook/react-vite": "^7.0.0-alpha.54",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -39,8 +47,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "storybook": "^7.0.0-alpha.54",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
