--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.7.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
