--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-essentials": "^7.0.0-alpha.54",
     "@storybook/addon-interactions": "^7.0.0-alpha.54",
     "@storybook/addon-links": "^7.0.0-alpha.54",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^7.0.0-alpha.54",
     "@storybook/react-vite": "^7.0.0-alpha.54",
     "@storybook/testing-library": "^0.0.13",
