--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.5",
+    "@typescript-eslint/parser": "^5.45.0",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.12",
     "react": "^18.2.0",
