--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http": "^0.0.1-security",
     "mongoose": "^6.7.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "socket.io": "^4.5.4"
   }
 }
