--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.4.3",
     "react-spinners": "^0.13.6",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-alpha.54",
