challange card bg, quotes component, new home page

--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,13 @@
     "react-router-dom": "^6.4.3",
     "react-spinners": "^0.13.6",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tsparticles": "^2.7.1",
+    "react-type-animation": "^2.1.2",
     "remark-gfm": "^3.0.1",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "tsparticles": "^2.7.1",
+    "tsparticles-engine": "^2.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-alpha.54",
@@ -42,6 +47,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
